--- a/week02/styles/box-model.css
+++ b/week02/styles/box-model.css
@@ -1,16 +1,16 @@
 .callout {
     max-width: 400px;
     margin: 10px;
-    border: 1px solid rgba(0,0,0,0.1);
-    padding: 15;
-    background-color: rgba(34,68,119,255);
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    padding: 15px;
+    background-color: rgba(34, 68, 119);
     color: white;
 }
 
 .callout img {
     float: right;
     margin: 0 0 10px 15px;
-    border: 1px soled rgba(52,62,76,255);
+    border: 1px soled rgb(34, 68, 119);
     padding: 3px;
     background-color: white;
     width: 100px;
