--- a/styles/styles.css
+++ b/styles/styles.css
@@ -22,7 +22,13 @@ main img {
 }
 
 p {
-    padding: 0px;
+    padding: 0;
+}
+
+main {
+    max-width: 840px;
+    margin-top: 100px;
+
 }
 
 aside {
@@ -35,6 +41,7 @@ aside {
     text-align: center;
 }
 
+
 aside img {
     width: 200px;
     height: auto;
@@ -45,9 +52,4 @@ footer {
     margin-top: 100px;
     border-top: 10px solid #6e2121;
     text-align: center;
-}
-
-main {
-    margin-top: 100px;
-
 }
