--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -7,8 +7,8 @@
     /*vivid sky blue */
     --accent2-color: #4A8FE7;
     /*Chefchaouen Blue */
-    --heading-font: "waiting for the sunrise", sans-serif;
-    --body-font: "knewave", sans-serif;
+    --heading-font: "Waiting for the Sunrise", cursive;
+    --body-font: "Knewave", sans-system-ui;
 }
 
 * {
@@ -17,6 +17,19 @@
     box-sizing: border-box;
 }
 
+/*.knewave-regular {
+  font-family: "Knewave", system-ui;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.waiting-for-the-sunrise-regular {
+  font-family: "Waiting for the Sunrise", cursive;
+  font-weight: 400;
+  font-style: normal;
+}
+
+*/
 body {
     font-family: var(--body-font);
     color: var(--accent1-color);
