--- a/styles/styles.css
+++ b/styles/styles.css
@@ -14,18 +14,27 @@
 nav {
     background-color: var(--heading-background-color);
     padding: 10px;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    padding: 15px;
 }
 
 nav a {
     color: var(--text-link-color);
     display: block;
-    padding: 20px;
+    padding: 50px;
+    text-decoration: none;
+    background-color: blue;
+
+
 }
 
 h1 {
     color: var(--heading-background-color);
     text-align: center;
     padding: 5rem;
+    border-bottom-style: solid;;
 }
 
 main img {
@@ -42,11 +51,12 @@ main img {
 main {
     max-width: 840px;
     margin-top: 100px;
+    grid-column: 2/3;
 
 }
 
 aside {
-    width: 50em;
+    width: 20rem;
     /*
     margin: 10px;
     border: 30px solid var(--heading-background-color);
@@ -55,6 +65,8 @@ aside {
     color: var(--text-color); */
     text-align: center;
     position: relative;
+    grid-column: 1/2;
+    grid-row: 1/2;
 }
 
 aside img {
@@ -93,4 +105,18 @@ footer {
 
 .indent {
     padding-left: 2rem;
+}
+
+header, .grid, footer {
+    max-width: 840px;
+    margin: 0 auto;
+}
+
+.grid {
+    margin: 1px;
+    display: grid;
+    align-items: center;
+    
+    
+
 }
