--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -52,8 +52,8 @@ nav,
 p,
 section,
 article {
-    margin: 16px;
-    padding: 8px;
+    margin: 0;
+    padding: 10px;
 }
 
 .socialmedia a {
@@ -83,7 +83,7 @@ h1 {
 
 .hero article {
     position: absolute;
-    bottom: 20px;
+    bottom: 120px;
     width: 100%;
     padding: 10px;
     text-align: center;
@@ -94,9 +94,87 @@ h1 {
 
 .hero article img {
     float: right;
+    position: relative;
+    bottom: 15px;
     width: 150px;
 }
 
+header {
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    align-items: center;
+    border: #111111 solid 1px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+header nav {
+    display: flex;
+    grid-template-columns: repeat(4, 1fr);
+    align-items: center;
+    justify-content: center;
+}
+
+header nav a {
+        border: #111111 solid 1px;
+}
+
+.history {
+    border: #111111 solid 1px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    display: flex;
+    justify-content: space-around;
+}
+
+.history h2 {
+    border: #111111 solid 1px;
+    height: 250px;
+    width: 200px;
+    text-align: center;
+}
+
+.history p {
+        width: 250px;
+        margin-top: 20px;         
+}
+
+
+.await {
+    display: grid;
+    grid-template-rows: 50px 1fr;
+    grid-template-columns: repeat(5, 20%);
+    border: #111111 solid 1px;
+    margin-bottom: 10px;
+}
+
+.await img {
+    
+    width: 150px;
+    grid-row-start: 2;
+}
+
+.await h2 {
+    grid-column: 2/6;
+    position: relative;
+    left: 130px;
+
+}
+
+footer {
+    border: #111111 solid 1px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
 .socialmedia img {
-    width: 100px;
+    width: 50px;
+}
+
+footer {
+    display: grid;
+    grid-template-columns: 3fr 1fr;
+    align-items: center;
+    justify-items: center;
+
 }
