--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -115,7 +115,7 @@ header nav {
 }
 
 header nav a {
-        border: #111111 solid 1px;
+    border: #111111 solid 1px;
 }
 
 .history {
@@ -134,8 +134,8 @@ header nav a {
 }
 
 .history p {
-        width: 250px;
-        margin-top: 20px;         
+    width: 250px;
+    margin-top: 20px;
 }
 
 
@@ -148,7 +148,7 @@ header nav a {
 }
 
 .await img {
-    
+
     width: 150px;
     grid-row-start: 2;
 }
@@ -175,5 +175,84 @@ footer {
     grid-template-columns: 3fr 1fr;
     align-items: center;
     justify-items: center;
+}
 
+.contact {
+    position: relative;
+    margin-bottom: 50px;
+    border: #111111 solid 1px;
+}
+
+.contactinfo {
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    grid-template-rows: 100px 1fr;
+    border: #111111 solid 1px;
+    width: 840px;
+    height: auto;
+}
+
+#contact1 {
+    grid-column: 1/3;
+    text-align: center;
+}
+
+
+iframe {
+    width: 100%;
+    height: auto;
+}
+
+.employee {
+    display: grid;
+    border: #111111 solid 1px;
+    justify-content: center;
+    text-align: center;
+    row-gap: 2rem;
+    margin-top: 50px;
+    padding: 1rem;
+}
+
+.employee div img {
+    width: 400px;
+}
+
+form {
+    display: grid;
+    row-gap: 20px;
+    border: #111111 solid 1px;
+    width: 840px;
+    height: auto;
+    padding: 10px;
+}
+
+form fieldset {
+    border: none;
+}
+
+#message101 {
+    display: flex;
+    flex-direction: column;
+}
+
+button {
+    border: none;
+    background-color: #59D2FE;
+    font-size: xx-large;
+    border-radius: 1rem;
+    padding: 1rem;
+}
+
+#button1 {
+    display: flex;
+    justify-content: center;
+}
+
+
+button:hover {
+    background-color: var(--secondary-color);
+}
+
+#contactform {
+    text-align: center;
 }
