--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -256,3 +256,17 @@ button:hover {
 #contactform {
     text-align: center;
 }
+
+/* Trips Table */
+
+table {
+  border-collapse: collapse;
+  width: 100%;
+}
+
+td,
+th, tr {
+  border: 1px solid black;
+  padding: 10px 10px;
+}
+
