--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -293,8 +293,9 @@ tr {
 .homesection {
     width: 840px;
     display: grid;
-    grid-template-columns: repeat(5, 1fr);
-    grid-template-rows: repeat(5, 1fr);
+    gap: 0;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
 }
 
 .homesection img {
@@ -304,25 +305,25 @@ tr {
 
 #home1 {
     grid-column: 1/4;
-    grid-row: 1/3;
+    grid-row: 1/2;
 }
 
 #home2 {
     grid-column: 1/3;
-    grid-row: 3;
+    grid-row: 2/3;
 }
 
 #home3 {
-    grid-column: 4/6;
-    grid-row: 1/3;
+    grid-column: 4/7;
+    grid-row: 1/2;
 }
 
 #home4 {
-    grid-column: 3/6;
-    grid-row: 3;
+    grid-column: 4/7;
+    grid-row: 2;
 }
 
 #home5 {
     grid-column: 2/6;
-    grid-row: 7;
+    grid-row: 3;
 }
